TODO: Fix uneven spacing in portfolio grid

--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -750,13 +750,16 @@ input, select, textarea {
 /* Main */
 
 	#main {
+		display: grid;
+		grid-template-columns: 100%;
+		grid-gap: 0;
 		margin-left: 275px;
 	}
 
 		#main > section {
 			margin: 0;
-			overflow: hidden;
-			padding: 4em 0;
+			/* overflow: hidden; */
+			/* padding: 4em 0; */
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 			text-align: center;
 			background-image: url("images/overlay.png");
@@ -797,6 +800,7 @@ input, select, textarea {
 			}
 
 			#main > section.two {
+				overflow: visible;
 				background-color: #f5fafa;
 			}
 
@@ -1178,7 +1182,7 @@ input, select, textarea {
 .grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-gap: 5%;
+	grid-gap: 10px;
 }
 
 /* The Modal (background) */
